# menu-helper

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  README.md  app.js  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.config.json  pyproject.toml  uv.toml
.github/workflows/: backend-cloudflare.yml  ci.yml  containers.yml
backend/: README.md  package-lock.json  package.json  wrangler.toml
backend/cloudflare-edge/: README.md  package.json  wrangler.toml
backend/cn-backend/: Dockerfile  README.md  pyproject.toml
backend/cn-backend/src/menu_helper_cn_backend/: main.py  rooms.py
backend/src/: app.ts  index.ts
ci/: README.md
components/cart-bar/: cart-bar.js  cart-bar.wxss
components/image-picker/: image-picker.js  image-picker.wxml  image-picker.wxss
components/loading-mask/: loading-mask.js  loading-mask.wxml  loading-mask.wxss
components/menu-item-card/: menu-item-card.js  menu-item-card.json  menu-item-card.wxml  menu-item-card.wxss
components/navigation-bar/: navigation-bar.wxml  navigation-bar.wxss
components/quantity-stepper/: quantity-stepper.js  quantity-stepper.wxml  quantity-stepper.wxss
config/: env.js  features.js
docs/analytics/: event-definitions.json
domain/: menu.js
frontend/: README.md
frontend/frontend/: Dockerfile  README.md  index.html  package.json
i18n/: base.json
pages/home/: index.js  (+2 more)
services/: exchange-rate.js  llm-client.js  menu-recognition.js
store/: session-store.js  settings-store.js
utils/: currency.js  file.js  image-selection.js  json.js  prompts.js  share.js
(+75 files in other folders)
